# xlsliberator

./: .dockerignore  .editorconfig  .env.example  .formula_cache.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .vba_cache.json  .~lock.output.ods#  .~lock.output_final.ods#  .~lock.output_hybrid.ods#  AGENTS.md  AGENT_GUI_TESTING.md  AGENT_REWRITING.md  AI_FORMULA_REPAIR_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QA_REPORT.md  README.md  REMAINING_ISSUES.md  docker-compose.yml  langgraph.open-swe.json  output_final.ods  output_hybrid.ods  output_test.ods  output_test_ai.ods  problem.md  prompts.md  pyproject.toml  run_convert.sh  run_xlsliberator.py  sitecustomize.py  test_gui_tools.py  user_guide.md
.github/workflows/: ci.yml  corpus-nightly.yml  release.yml  security.yml
corpus/: manifest.json
corpus/baselines/: pre-certification-capability.json
corpus/evidence/: tdf-172479-minimization.json
demos/: README.md
demos/addin-replacement/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/database-dashboard/: LICENSE  PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/dependency-liberation/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/hostile-workbook/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/interactive-game/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/invoice-workflow/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/legacy-xls-application/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
demos/xlsb-operations-model/: PROVENANCE.md  README.md  acceptance.yaml  restrictions.md  task.md
docker/office/: images.lock.json  runtime-entrypoint
docker/open-swe/: Dockerfile
docker/test/: Dockerfile
docs/: agent_evaluation_release_gate.md  agent_repair.md  agentic_implementation_status.md  capability_matrix.json  capability_matrix.md  corpus_statistics.json  demo_corpus.md  excel_oracle.md  feasibility_plan.md  gates.md  implementation_status.md  mcp_tools.md  office_source_integration.md  production_hardening.md  release_readiness.md  repair_promotion.md  security_threat_model.md  validated_transformation_roadmap.md  vba_execution_architecture.md  web_app.md
docs/architecture/: decision-log.md  open-swe-migration.md
examples/: README.md  agent_test_tetris.py  claude_agent_conversion.ts
examples/scenarios/: basic_recalculation.json  public-acceptance.yaml
office/libreoffice/: manifest.json
prompts/: checklist.md  prompts.md
prompts/phases/: F0_project_kickoff.md  F10_charts_mvp.md  F11_formula_equivalence.md  F12_api_cli.md  F13_scorecard.md  F14_windows_validator.md  F15_performance_benchmarks.md  F16_real_dataset.md  F17_fallback_path.md  F1_repo_skeleton.md  F2_libreoffice_harness.md  F3_excel_ingestion.md  F4_mini_ods_writer.md  F5_formula_mapper.md  F6_macro_embedding.md  F7_vba_extraction.md  F8_vba_translator.md  F9_tables_listobjects.md  README.md  STRATEGY-DECISION.md
repairs/: README.md
repairs/tdf-172479-text-functions/: affected-corpus.json  record.json  reviewer.json
rules/: charts_map.yaml  event_map.yaml  forms_map.yaml  formula_incompatibilities.yaml  formula_map.yaml  vba_api_map.yaml
scripts/: generate_web_samples.py
skills/: README.md
skills/activex-to-open-controls/: README.md  SKILL.md
skills/formula-migration/: SKILL.md
skills/libreoffice-core-patching/: SKILL.md
skills/libreoffice-debugging/: SKILL.md
skills/migration-mutation-testing/: SKILL.md
skills/migration-planning/: SKILL.md
skills/migration-test-design/: SKILL.md
skills/ods-package-surgery/: README.md  SKILL.md
skills/open-service-adapter/: SKILL.md
skills/secure-workbook-execution/: SKILL.md
skills/userform-to-uno/: SKILL.md
skills/vba-to-python-uno/: SKILL.md
skills/visual-validation/: SKILL.md
skills/windows-dependency-replacement/: SKILL.md
skills/workbook-failure-minimization/: SKILL.md
skills/workbook-forensics/: SKILL.md
src/: sitecustomize.py
src/xlsliberator/: __init__.py  agent_evaluation.py  agent_repair.py  agent_rewriter.py  agent_validator.py  api.py  application_showcase.py  artifact_inventory.py  boundary_models.py  calc_backend.py  candidate_runtime.py  capability_matrix.py  certification_report.py  charts_reader.py  charts_to_uno.py  cli.py  config.py  conformance_corpus.py  container_boundary.py  control_inventory.py  demo_corpus.py  direct_exec_validator.py  docker_runtime.py  embed_macros.py  event_binding_writer.py  excel_oracle.py  execution_sandbox.py  extract_excel.py  extract_vba.py  failure_minimizer.py  fix_native_ods.py  forms_parser.py  forms_to_uno.py  formula_ast_transformer.py  formula_certification.py  formula_corpus.py  formula_engine.py  formula_mapper.py  formula_repair_loop.py  formula_rules.py  (+57 more)
tests/: __init__.py  conftest.py
tests/corpus/: README.md
tests/data/: README.md
tests/fixtures/: skill_discovery.yaml
tests/integration/: docker-compose.open-swe-smoke.yml  test_docker_web.py  test_open_swe_real.py
tests/it/: test_agent_runtime_validation.py  test_application_candidate_showcase.py  test_formula_parser_backend.py  test_interactive_game_showcase.py  test_libreoffice_session_service.py  test_macro_embed.py  test_mcp_server.py  test_ods_writer_smoke.py  test_real_libreoffice_conversion.py  test_translated_macro_runs.py  test_uno_conn.py
tests/real/: test_tippspiel_equivalence.py
tests/unit/: test_agent_evaluation.py  test_agent_repair.py  test_agent_rewriter_refinement.py  test_agent_validator.py  test_api_macro_security.py  test_api_progress.py  test_application_showcase.py  test_artifact_inventory.py  test_cli_web.py  (+68 more)
tools/: build_demo_workbooks.sh  check_cell_values.py  ci_check.py  diagnose_formulas.py  generate_certification_samples.py  office  office.py  test_formula_locale.py  test_llm_translator.py  test_match_function.py  test_vba_translation.py  windows_excel_oracle.py  write_release_inputs.py
(+154 files in other folders)
