[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsliberator"
version = "0.1.0"
description = "Excel to LibreOffice Calc converter with VBA-to-Python-UNO macro translation"
authors = [
    {name = "XLSLiberator Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["excel", "libreoffice", "calc", "converter", "vba", "uno", "ods"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "oletools>=0.60",
    "pyxlsb>=1.0.10",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "anthropic>=0.39.0",
    "lark>=1.1.0",
]

[project.scripts]
xlsliberator = "xlsliberator.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-openpyxl",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlsliberator"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**" = ["ARG", "SIM"]  # Relax some rules for tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "odfpy.*",
    "oletools.*",
    "pyxlsb.*",
    "uno",
    "unohelper",
    "com.sun.star.*",
    "formulas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring LibreOffice UNO",
    "benchmark: marks performance benchmarks",
    "real: marks tests using real datasets",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
