[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsliberator"
version = "0.1.0"
description = "Excel to LibreOffice Calc converter with VBA-to-Python-UNO macro translation"
authors = [
    {name = "Johann-Peter Hartmann", email = "johann-peter.hartmann@mayflower.de"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["excel", "libreoffice", "calc", "converter", "vba", "uno", "ods"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "defusedxml>=0.7.1",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.1",
    "oletools>=0.60",
    "pyxlsb>=1.0.10",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "lark>=1.1.0",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/johannhartmann/xlsliberator"
Repository = "https://github.com/johannhartmann/xlsliberator"
Issues = "https://github.com/johannhartmann/xlsliberator/issues"
Changelog = "https://github.com/johannhartmann/xlsliberator/blob/main/CHANGELOG.md"

[project.scripts]
xlsliberator = "xlsliberator.cli:cli"
xlsprobe = "xlsliberator.xlsprobe:cli"
odstool = "xlsliberator.odstool:cli"
migration-check = "xlsliberator.migration_check:cli"

[project.optional-dependencies]
web = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7.4.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "httpx2>=0.28.0",
    "types-openpyxl",
    "types-PyYAML",
    "types-defusedxml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlsliberator"]

[tool.hatch.build.targets.wheel.force-include]
"src/sitecustomize.py" = "sitecustomize.py"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**" = ["ARG", "SIM"]  # Relax some rules for tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "odfpy.*",
    "oletools.*",
    "pyxlsb.*",
    "uno",
    "unohelper",
    "com.sun.star.*",
    "formulas.*",
    "lark",
    "lark.*",
    "click",
    "fastmcp",
    "fastmcp.*",
    "uvicorn",
    "fastapi",
    "fastapi.*",
    "agent",
    "agent.*",
    "deepagents",
    "deepagents.*",
    "langchain_core",
    "langchain_core.*",
    "langchain_mcp_adapters",
    "langchain_mcp_adapters.*",
    "langchain_openai",
    "langchain_openai.*",
    "langgraph",
    "langgraph.*",
    "langgraph_sdk",
    "langgraph_sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring LibreOffice UNO",
    "benchmark: marks performance benchmarks",
    "real: marks tests using real datasets",
    "docker: marks tests requiring Docker",
    "live: marks optional tests requiring live external services",
    "optional: marks an explicitly non-blocking test that may skip",
    "asyncio: marks tests as async",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.bandit]
exclude_dirs = ["tests/", "build/", "dist/"]
skips = [
    "B101",  # assert usage - legitimate for type checking
    "B404",  # subprocess import - legitimate use for LibreOffice
    "B603",  # subprocess without shell - we use list args, safe
    "B607",  # partial path - system commands (pkill, soffice)
]
# B110 (try-except-pass) and B314 (XML parsing) are real issues to address
